--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ ul li a:hover{
 color: #99A769;
 }
 header{
-  background: url("../images/verdure header.jpg");
+  background: url("verdure header.jpg");
   background-position: center;
   background-size: cover;
   padding-bottom: 200px;
@@ -81,7 +81,7 @@ width: 600px;
 margin-left:-170px;
 }
 .main-page  {
-background:url("../images/home-2background.jpg");
+background:url("home-2background.jpg");
 background-position: right;
 background-size: cover;
 width: 940px;
@@ -143,7 +143,7 @@ span{
 }
 
 .page2{
-background:url("../images/home-2background.jpg");
+background:url("home-2background.jpg");
 background-position: right;
 background-size: cover;
 height: 350px;
